--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
       <a href="#" class="footer_link">
         <div class="footer_contact">
           <h3 class="title">Contact us</h3>
-          <p class="mail">Mail Form</p>
+          <p class="mail">Mail</p>
         </div>
       </a>
       <div class="footer_end">
